Fixes alert-dialog darkmode style overflow

--- a/src/components/include.scss
+++ b/src/components/include.scss
@@ -1052,7 +1052,6 @@ h1.logo {
 	z-index: 9998;
 	width: 100%;
 	height: 100%;
-	background: rgba(0,0,0,0.66);
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -1081,7 +1080,7 @@ h1.logo {
 	}
 }
 
-.darkMode .page, .darkMode .widget {
+.darkMode .page, .darkMode.widget {
 	.alert-wrapper {
 		background: rgba(0,0,0,0.66);
 
